   -  macro arguments: curly braces now handled Masm-compatible; see
      macro25.asm.
   -  operator MOD returned wrong results for negative operands; see mod1.asm,
      mod2.asm.
   -  operator '/': 64-bit division generally assumed signed operands, hence
      results were wrong if dividend was unsigned with bit 63 set.
   -  elf format: in symbol table, size wasn't set for data publics.

   Other changes:
   -  format elf: cmdline option -Zd (dwarf line numbers) supported (limited
      to one file).
   -  format elf: added cmdline option -pic{0|1|2}; position-independent code
      generation (-pic1) is now the default for elf.
   -  format elf: EXTERNDEF accepts optional EXPORT qualifier; this qualifier
      modifies visibility for -pic2.
   -  format elf32: qualifier SECTIONREL redefined for this format; will 
      return offset relative to GOT.
   -  format elf32: special handling of symbol _GLOBAL_OFFSET_TABLE_.

   01.12.2025, v2.20:

   Bugfixes:
   -  warning level 3 about prologue not triggered at PROC start may have
      caused a crash; see prolog4.asm.
   -  .model directive: os qualifier (OS_DOS,OS_OS2) never worked; see
      startup5.asm.
   -  pushd: no opsize prefix generated in 16-bit code; see pushwd.asm.
   -  pushw: memory operands were rejected; see pushwd.asm.
   -  regression in v2.19: option -Sg without option -Fl caused a GPF.
   -  string literals used as record field initializers gave error 'constant
      expected'; see record6.asm.
   -  no warning was emitted if initialized record data items in BSS segments
      were detected; see record7.asm.
   -  empty record initializer literal may have triggered error "constant
      value too large" since code wasn't adjusted to 64-bit records yet.

   Other changes:
   -  sample Win32_5 updated in manual.html.
   -  OPTION CODEVIEW got another switch, to suppress line number generation
      for segments that don't have class 'CODE'.